<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="invalid_email">Недопустимый email</string>
    <string name="invalid_password">Пароль должен содержать не менее 8 символов</string>

    <string name="authorization_success">Авторизация прошла успешно.</string>
    <string name="authorization_canceled">Авторизация отменена.</string>
    <string name="authorization_error">Ошибка авторизации.</string>

    <string name="sign_up_needed">Необходимо зарегистрироваться.</string>

    <string name="authorization">Авторизация</string>
    <string name="username_hint">Пользователь</string>
    <string name="username_hint_small">\u0020\u0020\u0020\u0020Пользователь</string>
    <string name="password_hint">Пароль</string>
    <string name="password_hint_small">\u0020\u0020\u0020\u0020Пароль</string>
    <string name="sign_in_button">Вход</string>
    <string name="cancel_button">Отмена</string>

    <string name="text_click_register">Зарегистрироваться</string>
    <string name="checkbox_remember">Запомнить</string>


    <!--Registration-->
    <string name="registration_title">Регистрация</string>
    <string name="i_am_admmin_text">Я - администратор группы</string>

    <string name="second_name">Фамилия</string>
    <string name="first_name">Имя</string>
    <string name="position">Должность</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="password_dub">Пароль повторно</string>

</resources>
