<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegistrationFragment">

    <ScrollView
        android:id="@+id/sv_registration"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="@string/registration_title"
                android:fontFamily="@font/naga"
                />

            <LinearLayout
                android:id="@+id/ll_admin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="16sp"
                    android:text="@string/i_am_admmin_text"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_profile_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:orientation="vertical"
                >

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_second_name_reg"
                    style="@style/TextInputLogin">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_second_name_reg"
                        style="@style/TextInputEditTextLogin"
                        android:hint="@string/second_name" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_first_name_reg"
                    style="@style/TextInputLogin">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_first_name_reg"
                        style="@style/TextInputEditTextLogin"
                        android:hint="@string/first_name" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_position_reg"
                    style="@style/TextInputLogin">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_position_reg"
                        style="@style/TextInputEditTextLogin"
                        android:hint="@string/position" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_email_reg"
                    style="@style/TextInputLogin">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_email_reg"
                        style="@style/TextInputEditTextLogin"
                        android:hint="@string/email" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_password_reg"
                    style="@style/TextInputLogin">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password_reg"
                        style="@style/TextInputEditTextLogin"
                        android:hint="@string/password" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_password_dub_reg"
                    style="@style/TextInputLogin">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password_dub_reg"
                        style="@style/TextInputEditTextLogin"
                        android:hint="@string/password_dub" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
            <!--<LinearLayout
                android:id="@+id/ll_btns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_cancel_reg"
                    style="@style/MenageButtonStyle"
                    android:layout_marginEnd="6dp"
                    android:text="@string/btn_cancel"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_ok_reg"
                    style="@style/MenageButtonStyle"
                    android:layout_marginStart="6dp"
                    android:text="@string/btn_ok"/>
            </LinearLayout>-->
            <include layout="@layout/handle_btn_block_layout"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>