<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginFragment"
android:background="@drawable/login_background"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="24dp"
                android:textSize="24dp"
                android:textStyle="bold"
                android:fontFamily="@font/local_titles"
                android:text="@string/authorization"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_username"
                style="@style/EditTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:textSize="22dp"
                    android:fontFamily="@font/cuyabra"
                    android:hint="@string/username_hint"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                style="@style/EditTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:textSize="22dp"
                    android:fontFamily="@font/cuyabra"
                    android:hint="@string/password_hint"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:orientation="horizontal"
                >

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="36dp"
                    android:textSize="16dp"
                    android:text="@string/sign_in_button"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_login_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="36dp"
                    android:textSize="16dp"
                    android:text="@string/cancel_button"
                    />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>

    <!--android:hint="Имя пользователя"-->

    <!--style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"-->